[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.64"
# rayon = "1.7.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
# wasm-bindgen-rayon = "1.0.3"


[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'GainNode',
    'OscillatorNode',
    'OscillatorType',
    "Worklet",
    "AudioWorkletProcessor",
    "AudioWorkletNode",
    "MidiInput",
    "Navigator",
    "MidiAccess",
    "MidiInputMap",
    "Window"
]

[unstable]
build-std = ['std', 'panic_abort']

[build]
target = "wasm32-unknown-unknown"
rustflags = '-Ctarget-feature=+atomics,+bulk-memory'
